apps/datasette/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: datasette
spec:
  selector:
    app: datasette
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
  type: ClusterIP
