apps/datasette/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: datasette
  namespace: default
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.middlewares: default-authentik-auth@kubernetescrd
spec:
  ingressClassName: traefik-traefik
  tls:
    - hosts:
        - datasette.home.bstjohn.net
      secretName: wildcard-home-tls
  rules:
    - host: datasette.home.bstjohn.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: datasette
                port:
                  number: 8001
